# openfinance-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.bat  run.sh
console/: Dockerfile  app.py  requirements.txt  run.bat  run.sh
console/static/: console.css  console.js  index.html
src/openfinance_mcp/: __init__.py  __main__.py  finbank_profiles.py  finicity_client.py  models.py  server.py  spec_defaults.py  testing_helpers.py
src/openfinance_mcp/config/: __init__.py  settings.py
tests/: conftest.py  test_protocol.py  test_sandbox.py  test_unit.py
