[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfinance-mcp"
version = "0.1.0"
description = "Standalone MCP server for Mastercard Open Finance US (Finicity) hosted APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
console = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
openfinance-mcp = "openfinance_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "sandbox: requires live Finicity sandbox credentials",
]
asyncio_mode = "auto"
testpaths = ["tests"]
